--- a/StartHere/src/main/resources/application.properties
+++ b/StartHere/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=${PORT:2019}
 # server.servlet.context-path=/apis
 
 # Which db to run
-local.run.db=H2
-# local.run.db=POSTGRESQL
+# local.run.db=H2
+local.run.db=POSTGRESQL
 
 # Environment Variables Needed for PostgreSQL database
 # MYDBHOST
@@ -28,12 +28,12 @@ spring.h2.console.settings.web-allow-others=true
 
 # What do with the schema
 # drop n create table again, good for testing
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.initialization-mode=always
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.initialization-mode=always
 
 # Good for production!
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=never
 
 # Should we use createBlob from java.sql.connection. PostgreSQL requires it to be true.
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
